--- a/web/app/javascript/stylesheets/components/me-feed.scss
+++ b/web/app/javascript/stylesheets/components/me-feed.scss
@@ -1,6 +1,6 @@
-@import "@material/card/_mixins";
-@import "@material/layout-grid/_mixins";
-@import "@material/layout-grid/_variables";
+//@import "@material/card/_mixins";
+//@import "@material/layout-grid/_mixins";
+//@import "@material/layout-grid/_variables";
 
 
 $name-color: $font-primary-color;
