--- a/web/app/javascript/stylesheets/components/me-filter.scss
+++ b/web/app/javascript/stylesheets/components/me-filter.scss
@@ -1,5 +1,5 @@
 @import "../variables";
-@import "@material/top-app-bar/_mixins";
+//@import "@material/top-app-bar/_mixins";
 
 .me-filter {
   user-select: none;
