--- a/web/app/javascript/stylesheets/components/me-text-field.scss
+++ b/web/app/javascript/stylesheets/components/me-text-field.scss
@@ -1,8 +1,8 @@
 
 .me-text-field {
-  @include mdc-text-field-ink-color($font-primary-color);
-  @include mdc-text-field-label-color($font-secondary-color);
-  @include mdc-text-field-focused-outline-color($brand-color);
+  //@include mdc-text-field-ink-color($font-primary-color);
+  //@include mdc-text-field-label-color($font-secondary-color);
+  //@include mdc-text-field-focused-outline-color($brand-color);
 
   &.mdc-text-field--outlined.mdc-text-field--dense .mdc-floating-label--float-above{
     color: $brand-color;
