--- a/web/app/javascript/stylesheets/components/me-card.scss
+++ b/web/app/javascript/stylesheets/components/me-card.scss
@@ -2,6 +2,7 @@ $name-color: $font-primary-color;
 $description-color: $font-secondary-color;
 
 .me-card {
+  //@include card.core-styles;
   background: $surface-color;
   position: relative;
   will-change: opacity, transform;
@@ -18,7 +19,7 @@ $description-color: $font-secondary-color;
     box-shadow: none;
     margin: 0 0 0 0;
     position: relative;
-    @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
+    //@include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     @include mobile-only {
       min-height: 165px;
     }
@@ -50,7 +51,7 @@ $description-color: $font-secondary-color;
     border: 0;
     box-shadow: none;
     background-color: inherit;
-    @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
+    //@include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     @include mobile-only {
       min-height: 90px;
     }
@@ -161,9 +162,9 @@ $description-color: $font-secondary-color;
     background: linear-gradient(to top, #ffffff38, rgba(255, 255, 255, 0));
     overflow: hidden;
     border-radius: $media-border-radius;
-    @include mdc-ripple-surface;
-    @include mdc-ripple-radius-bounded;
-    @include mdc-states;
+    //@include mdc-ripple-surface;
+    //@include mdc-ripple-radius-bounded;
+    //@include mdc-states;
     @include mobile-only {
     }
 
@@ -464,10 +465,10 @@ $description-color: $font-secondary-color;
       display: none;
       background: transparentize($surface-color, 0.05);
       transition: 0.2s all ease 0s;
-      @include mdc-icon-button-icon-size($width: 20px, $height: 20px, $padding: 10px);
+      //@include mdc-icon-button-icon-size($width: 20px, $height: 20px, $padding: 10px);
 
       @include mobile-only {
-        @include mdc-icon-button-icon-size($width: 18px, $height: 18px, $padding: 10px);
+        //@include mdc-icon-button-icon-size($width: 18px, $height: 18px, $padding: 10px);
         display: block;
       }
 
