--- a/web/app/javascript/stylesheets/components/me-movie.scss
+++ b/web/app/javascript/stylesheets/components/me-movie.scss
@@ -96,9 +96,9 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    @include mdc-ripple-surface;
-    @include mdc-ripple-radius-bounded;
-    @include mdc-states;
+    //@include mdc-ripple-surface;
+    //@include mdc-ripple-radius-bounded;
+    //@include mdc-states;
   }
 
   &__title {
