--- a/web/app/javascript/stylesheets/components/me-swipable.scss
+++ b/web/app/javascript/stylesheets/components/me-swipable.scss
@@ -352,14 +352,14 @@
       font-weight: 600;
       align-items: center;
       background: whitesmoke;
-      @include mdc-button-ink-color($font-tertiary-color);
+      //@include mdc-button-ink-color($font-tertiary-color);
       //@include mdc-button-outline-color($font-secondary-color)
     }
 
     & .mdc-button__icon {
       overflow: hidden;
-      @include mdc-button-ink-color($font-tertiary-color);
-      @include mdc-states-base-color($border-color);
+      //@include mdc-button-ink-color($font-tertiary-color);
+      //@include mdc-states-base-color($border-color);
     }
   }
 
