--- a/web/app/javascript/stylesheets/components/me-tab-bar.scss
+++ b/web/app/javascript/stylesheets/components/me-tab-bar.scss
@@ -1,11 +1,11 @@
 
-@import "@material/tab-bar/mdc-tab-bar";
-@import "@material/tab-scroller/mdc-tab-scroller";
-@import "@material/tab-indicator/mdc-tab-indicator";
-@import "@material/tab/mdc-tab";
+//@import "@material/tab-bar/mdc-tab-bar";
+//@import "@material/tab-scroller/mdc-tab-scroller";
+//@import "@material/tab-indicator/mdc-tab-indicator";
+//@import "@material/tab/mdc-tab";
 
 .me-tab-bar {
-  @include mdc-tab-bar-density(-1);
+  //@include mdc-tab-bar-density(-1);
   background: $surface-color;
   display: block;
   width: auto;
@@ -19,13 +19,13 @@
     top: 64px;
   }
   @include mobile-only {
-    @include mdc-tab-bar-density(-1);
+    //@include mdc-tab-bar-density(-1);
     top: 0;
   }
 
   & .mdc-tab {
     width: auto;
-    @include mdc-tab-states-color(#ffffff);
+    //@include mdc-tab-states-color(#ffffff);
     // max-width: 100px;
     @include desktop-only {
 
