--- a/web/app/javascript/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/javascript/stylesheets/components/me-top-app-bar.scss
@@ -1,5 +1,5 @@
 
-@import "@material/top-app-bar/_mixins";
+//@import "@material/top-app-bar/_mixins";
 
 $fill-color: #ffffff;
 $font-color: $font-primary-color;
@@ -157,9 +157,9 @@ $border-color: #e0e0e0;
       width: 100%;
       height: 100%;
       position: absolute;
-      @include mdc-ripple-surface;
-      @include mdc-ripple-radius-bounded;
-      @include mdc-states;
+      //@include mdc-ripple-surface;
+      //@include mdc-ripple-radius-bounded;
+      //@include mdc-states;
     }
     & svg {
       fill: $icon-color;
