--- a/web/app/views/components/events/_saves.html.erb
+++ b/web/app/views/components/events/_saves.html.erb
@@ -1,6 +1,8 @@
 <%
 
-	html = local_assigns.fetch(:html, {})
+	html = {
+
+	}.deep_merge!(local_assigns.fetch(:html, {}))
 
 %>
 
@@ -12,30 +14,30 @@
 		<% unless html.dig(:continue_to, :hidden) %>
 			<div class="<%= html.dig(:continue_to, :class) || 'group-hover:text-chateau-green-500 inline-flex items-center md:pr-0 pr-3 text-gray-800 text-xs' %>"
 					 data-action="click->section#seeMoreInNewPage">
-				<svg class="fill-current h-auto md:hidden md:ml-2 md:w-10 ml-1 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg class="w-5 h-auto ml-1 fill-current md:hidden md:ml-2 md:w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
 				</svg>
 			</div>
 		<% end %>
 	<% end %>
 	<div class="relative">
-		<div class="hidden md:flex select-none items-center absolute left-0 top-0 bg-x-white-to-transparent rounded-full h-full w-10 z-20">
-			<div data-action="click->slider#left" class="bg-white rounded-full border shadow-md transition-colors duration-200 text-gray-700 hover:text-chateau-green-500 cursor-pointer my-auto -ml-5">
-				<svg class="fill-current h-10 p-2 w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
+		<div class="absolute top-0 left-0 z-20 items-center hidden w-10 h-full rounded-full pointer-events-none select-none md:flex bg-x-white-to-transparent">
+			<div data-action="click->slider#left" class="my-auto -ml-5 text-gray-700 transition-colors duration-200 bg-white border rounded-full shadow-md cursor-pointer hover:text-chateau-green-500">
+				<svg class="w-10 h-10 p-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 					<path d="M0 0h24v24H0V0z" fill="none"/>
 					<path d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"/>
 				</svg>
 			</div>
 		</div>
-		<div class="hidden md:flex select-none items-center absolute right-0 top-0 bg-x-transparent-to-white rounded-full h-full w-10 z-20">
-			<div data-action="click->slider#right" class="bg-white rounded-full border shadow-md transition-colors duration-200 text-gray-700 hover:text-chateau-green-500 cursor-pointer my-auto ml-5">
-				<svg class="fill-current h-10 p-2 w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
+		<div class="absolute top-0 right-0 z-20 items-center hidden w-10 h-full rounded-full pointer-events-none select-none md:flex bg-x-transparent-to-white">
+			<div data-action="click->slider#right" class="my-auto ml-5 text-gray-700 transition-colors duration-200 bg-white border rounded-full shadow-md cursor-pointer hover:text-chateau-green-500">
+				<svg class="w-10 h-10 p-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 					<path d="M0 0h24v24H0V0z" fill="none"/>
 					<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
 				</svg>
 			</div>
 		</div>
-		<div class="gap-3 grid grid-after-margin grid-flow-col md:flex md:pl-0 mt-1 pl-5 pt-5 pb-2 scrollx"
+		<div class="grid grid-flow-col gap-3 pt-5 pb-2 pl-5 mt-1 grid-after-margin md:flex md:pl-0 scrollx"
 				 data-target="saves.list slider.scroller">
 			<% if identifier == 'movies-saved' %>
 				<%= render(partial:    'components/collection/movie',
