--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -56,7 +56,7 @@
 									 identifier:      'events-saved',
 									 saved_resources: @saved_events,
 									 html:            {
-											 layout: {
+											 layout:    {
 													 id:   'events-saved',
 													 data: {
 															 controller:               'flip',
@@ -64,6 +64,9 @@
 															 'flip-finished-listener': 'cable-ready:after-morph',
 															 'flip-identifier':        'data-events-saved-flip-key'
 													 }
+											 },
+											 container: {
+													 css: class_names('hidden': @saved_events.blank?)
 											 }
 									 },
 									 cached:          true,
@@ -203,7 +206,7 @@
 				<% User.following_users(current_user).each do |user| %>
 					<%= link_to user_path(user), {class: ''} do %>
 						<div onclick="window.AnimateModule.animatePageHide()" class="flex flex-col items-center">
-							<%= image_tag user.picture, {class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: user.name}, onerror: "this.onerror=null;this.src='/assets/avatars/cat-medium.png';" rescue nil %>
+							<%= image_tag user.picture, {class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: user.name, onerror: "this.onerror=null;this.src='/assets/avatars/cat-medium.png';"} rescue nil %>
 							<%= user.first_name %>
 						</div>
 					<% end %>
@@ -243,7 +246,7 @@
 												 update_collection_on_action: true
 										 }
 								 },
-								 cached:            true,
+								 cached:            false,
 								 cache_key:         [current_user, 'following-users', session[:stimulus].to_param, @events_from_followed_users&.pluck(:id), @events_from_followed_users&.try(:maximum, :updated_at)]
 						 } %>
 
