--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -15,13 +15,13 @@
 
 %>
 
-<header class="flex md:w-9/12 md:px-0 mx-auto px-5 py-3 select-none tap-highlight-none" id="top-bar">
+<header class="flex px-5 py-3 mx-auto select-none md:w-9/12 md:px-0 tap-highlight-none" id="top-bar">
 	<div class="<%= class_names 'flex-1 inline-flex items-center', 'hidden': ['search'].include?(controller_name) %>">
 		<% if props[:visible][:backbutton] %>
-			<div class="-ml-2 mr-2 text-gray-700 select-none tap-highlight-none"
+			<div class="mr-2 -ml-2 text-gray-700 select-none tap-highlight-none"
 					 onclick="window.AnimateModule.animateBackbutton()"
 					 aria-label="Voltar">
-				<svg class="fill-current w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg class="w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path d="M20 11H6.83l2.88-2.88c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L3.71 11.3c-.39.39-.39 1.02 0 1.41L8.3 17.3c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L6.83 13H20c.55 0 1-.45 1-1s-.45-1-1-1z"/>
 				</svg>
 			</div>
@@ -38,7 +38,7 @@
 	<% if props[:visible][:search] %>
 		<div class="flex-auto w-1/3">
 			<form
-				class="border flex h-full items-center px-4 rounded-full"
+				class="flex items-center h-full px-4 border rounded-full"
 				data-controller="search"
 				data-target="search.search"
 				data-reflex-permanent
@@ -47,18 +47,18 @@
 				method="get"
 				name="search"
 				style="width: 100%">
-				<svg class="fill-current h-auto material-icons w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg class="w-6 h-auto fill-current material-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path fill="none" d="M0 0h24v24H0V0z"/>
 					<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
 				</svg>
 				<input autocomplete="false"
 							 name="q"
-							 class="flex-1 h-full mx-2 py-1"
+							 class="flex-1 w-full h-full py-1 mx-2"
 							 id="text-field-shape-one"
 							 placeholder="O que você está buscando hoje?"
 							 type="text"
 							 data-target="search.input">
-				<input class="-m-1 -mr-3 antialiased bg-gray-200 cursor-pointer font-light hover:bg-gray-300 my-1 px-4 py-2 rounded-full text-gray-700 text-sm"
+				<input class="px-4 py-2 my-1 -m-1 -mr-3 text-sm antialiased font-light text-gray-700 bg-gray-200 rounded-full cursor-pointer hover:bg-gray-300"
 							 type="submit" value="Buscar"
 							 data-target="search.submit"
 							 data-action="click->search#searching"/>
@@ -90,7 +90,7 @@
 			</div>
 			<% if current_user&.picture %>
 				<%= link_to user_path(current_user) do %>
-					<img src="<%= current_user.picture :small %>" class="border border-gray-100 h-8 md:h-10 ml-2 rounded-full" alt="<%= current_user&.name %>">
+					<img src="<%= current_user.picture :small %>" class="h-8 ml-2 border border-gray-100 rounded-full md:h-10" alt="<%= current_user&.name %>">
 				<% end %>
 			<% end %>
 		<% end %>
